--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </div>
       <div class="modal-body">
         <!--<div v-html="html"></div>-->
-		<component :is="dynamicComponent" />
+				<component :is="dynamicComponent" />
       </div>
       <div class="modal-footer">
         <a :href="'https://steemit.com' + post.url" onclick='return !window.open(this.href)' role="button" class="btn btn-primary">Go <i>steemit.com</i> <i class="material-icons align-middle">launch</i></a>
@@ -120,13 +120,13 @@ const ModalComponent = {
 		dynamicComponent: function() {
       if(!this.post.body) return "";
 			let body = (this.post.body || '');
-			console.log(body);
-			const find_urls = (body.match(/[^\(='"\/\\](http(s)?:\/\/steemitimages.com\/([0-9]+x[0-9]+)\/)?http(s)?:\/\/(\w*:\w*@)?[-\w.]+(:\d+)?(\/([-\w/_.]*(\?\S+)?)?)?/g) || []).reduce(function(a,b){if(a.indexOf(b)<0)a.push(b);return a;},[]);
-			console.log(find_urls);
+			// console.log(body);
+			const find_urls = (`\n${body}`.match(/[^\(='"\/\\](http(s)?:\/\/steemitimages.com\/([0-9]+x[0-9]+)\/)?http(s)?:\/\/(\w*:\w*@)?[-\w.]+(:\d+)?(\/([-\w/_.]*(\?\S+)?)?)?/g) || []).reduce(function(a,b){if(a.indexOf(b)<0)a.push(b);return a;},[]);
+			// console.log(find_urls);
 			for(let i=0, s=find_urls.length, url = find_urls[i]; i<s; i++, url = find_urls[i]) {
         url = url.replace(/(^>|\s)/g, '');
 				if(url.indexOf('youtu')!==-1) {
-          const youTubeId = body.match(/(?:(?:youtube.com\/watch\?v=)|(?:youtu.be\/)|(?:youtube.com\/embed\/))([A-Za-z0-9\_\-]+)/i);
+          const [_,youTubeId] = url.match(/(?:(?:youtube.com\/watch\?v=)|(?:youtu.be\/)|(?:youtube.com\/embed\/))([A-Za-z0-9\_\-]+)/i);
 					body = body.replace(url, `<iframe width="640" height="360" src="https://www.youtube.com/embed/${youTubeId}?autoplay=0&amp;autohide=0&amp;enablejsapi=0&amp;rel=0&amp;origin=https://steemit.com" frameborder="0" allowfullscreen=""></iframe>`);
 				};
         if(/(.(?:tiff?|jpe?g|gif|png|svg|ico))$/.test(url)) {
@@ -141,11 +141,6 @@ const ModalComponent = {
 			// body = body.replace(/\n/g, '<br>');
 		  return {
         template: `<div>${body}</div>`,
-        methods: {
-          someAction() {
-          console.log("Action!");
-          }
-        }
 		  }
 		}
 	  },
@@ -170,7 +165,7 @@ const ListComponent = {
 		};
 		steem.api.getDiscussionsByCreated(query, (err, res) => {
 			if (err) return !alert(err);
-			console.log(res)
+			// console.log(res)
 			this.items = res.map(({
 				id,
 				active_votes,
@@ -247,11 +242,12 @@ const ListComponent = {
       e.target.parentElement.innerHTML = `<iframe width="640" height="360" src="https://www.youtube.com/embed/${id}?autoplay=1&autohide=1&enablejsapi=0&rel=0&origin=https://steemit.com" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>`;
     },
 		preload (id) {
-			console.log('preload:', id);
+			// console.log('preload:', id);
 			//this.url = `https://steemit.com${url}`;
 			const find_post = this.items.filter((e) => (e.id === id))[0];
-      if(find_post.id !== this.post.id)
-        this.post = find_post;
+      if(find_post.id !== this.post.id) {
+				this.post = find_post;
+			}
 		},
 		makeSummary (text) {
 			let summary = converter.makeHtml(text);
