--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 </div>
 <script src="//unpkg.com/vue/dist/vue.js"></script>
 <script src="//unpkg.com/vue-router/dist/vue-router.js"></script>
-<script src="//cdn.rawgit.com/showdownjs/showdown/1.8.6/dist/showdown.min.js"></script>
+<!-- <script src="//cdn.rawgit.com/showdownjs/showdown/1.8.6/dist/showdown.min.js"></script> -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>
 <script src="//cdn.steemjs.com/lib/latest/steem.min.js"></script><!-- https://github.com/steemit/steem-js/ -->
 <script src="//code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 <script id="ListComponent" type='text/template'>
 <div>
 	<div class="card-columns" v-if="items && items.length > 0" >
@@ -110,8 +112,19 @@
   </div>
 </div>
 </script>
-<script type="text/javascript">
-const converter = new showdown.Converter();
+
+<!-- Load Babel -->
+<!-- v6 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script type="text/babel">
+const md = new Remarkable({
+  html: true,
+  linkify: true,
+  typographer: true,
+  quotes: '“”‘’',
+  breaks: true
+});
+
 const ModalComponent = { 
 	template: '#ModalComponent',
 	name: 'Modal',
@@ -129,7 +142,7 @@ const ModalComponent = {
           const [_,youTubeId] = url.match(/(?:(?:youtube.com\/watch\?v=)|(?:youtu.be\/)|(?:youtube.com\/embed\/))([A-Za-z0-9\_\-]+)/i);
 					body = body.replace(url, `<iframe width="640" height="360" src="https://www.youtube.com/embed/${youTubeId}?autoplay=0&amp;autohide=0&amp;enablejsapi=0&amp;rel=0&amp;origin=https://steemit.com" frameborder="0" allowfullscreen=""></iframe>`);
 				};
-        if(/(.(?:tiff?|jpe?g|gif|png|svg|ico))$/.test(url)) {
+        if(/(.(?:tiff?|jpe?g|gif|png|svg|ico))$/.test(url) || /ipfs.busy/.test(url)) {
           body = body.replace(new RegExp(`${url}`, 'g'), `<img src='${url}'/>`);
         };
 
@@ -137,8 +150,7 @@ const ModalComponent = {
 				// "(?:(?:\\.(?:tiff?|jpe?g|gif|png|svg|ico)|ipfs/[a-z\\d]{40,}))"
 				// "/(https?:\/\/.*)?\/ipfs/i"				
 			};
-			body = converter.makeHtml(body);
-			// body = body.replace(/\n/g, '<br>');
+			body = md.render(body);
 		  return {
         template: `<div>${body}</div>`,
 		  }
@@ -212,24 +224,24 @@ const ListComponent = {
 				const payout_value = (parseFloat(total_payout_value.split(' ')[0]) + parseFloat(curator_payout_value.split(' ')[0]) + parseFloat(pending_payout_value.split(' ')[0])).toFixed(3)
 
 				// 썸머리 생성
-				summary = this.makeSummary(body);
+				const summary = this.makeSummary(body);
 
 				return {
 					id,
 					streaming_type,
 					streaming_id,
 					author,
-					author_reputation,
+					// author_reputation,
 					body,
 					summary,
-					children,
+					// children,
 					created,
-					json_metadata,
+					// json_metadata,
 					net_votes,
-					active_votes,
+					// active_votes,
 					permlink,
 					title,
-					abs_rshares,
+					// abs_rshares,
 					payout_value,
 					url,
 				};
@@ -250,14 +262,15 @@ const ListComponent = {
 			}
 		},
 		makeSummary (text) {
-			let summary = converter.makeHtml(text);
+			// let summary = converter.makeHtml(text);
+			let summary = md.render(text);
 			summary = summary.replace(/<(?:.|\n)*?>/gm, '');
 			summary = summary.replace(/(http(s)?:\/\/steemitimages.com\/([0-9]+x[0-9]+)\/)?http(s)?:\/\/(\w*:\w*@)?[-\w.]+(:\d+)?(\/([\w/_.]*(\?\S+)?)?)?/g, '');
 			summary = summary.replace(/(\s)+Sponsored \( Powered by dclick \)(.|\n)*/im, '');
 			let sentences = summary.split('\n');
-			const findIndex = sentences.findIndex((e)=>/(도전|노래|^코인노래방)/g.test(e));
+			const findIndex = sentences.findIndex((e)=>/(도전|노래|[^코인노래방])/g.test(e));
 			if(findIndex>0) sentences = ['…'].concat(sentences.slice(findIndex));
-			return sentences.join(' ');
+			return sentences.join(' ').slice(0, 200);
 		}
 	}
 }
