--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<title>Singsteemit</title>
-<link rel="manifest" href="./manifest.json">
+<title>씽스팀(Singsteem)</title>
+<!-- <link rel="manifest" href="./manifest.json"> -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" data-reactid="4">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -12,16 +12,57 @@
 <link href='//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css' rel="stylesheet" type="text/css" />
 <link href="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link href="//fonts.googleapis.com/css?family=Noto+Sans+KR|Material+Icons" rel="stylesheet">
-<link href="style.css" rel="stylesheet">
+<link href="./style.css" rel="stylesheet">
 </head>
 <body>
 <div class="jumbotron">
-	<h1 class="display-4">[콘테스트] 제 1회 나는 코노 가수다!!</h1>
-	<p class="lead">뉴비존님(<a href="https://steemit.com/@newbijohn" onclick="return !window.open(this.href)">@newbijohn</a>)께서 개최하신 <q>제 1회 나는 코노(코인노래방) 가수다!!</q> 콘테스트입니다.</p>
-	<hr class="my-4">
-	<p>참여기간: 2018-10-24 ~ 2018-10-31 까지</p>
-	<a class="btn btn-primary btn-lg" href="https://steemit.com/kr/@newbijohn/77utdm-1-feat" role="button" onclick="return !window.open(this.href)">자세히 보러가기</a>
+	<h1 class="display-5">[콘테스트] 제 2회 나는 코노 가수다!!</h1>
+	<p class="lead"><a href="https://steemit.com/@newbijohn" target="_blank">뉴비존(@newbijohn)</a>님이 개최하는 <q>제 2회 나는 코노(코인노래방) 가수다!!</q> 콘테스트입니다.</p>
+  <hr class="my-4">
+  <!-- <img src='https://steemitimages.com/0x0/https://cdn.steemitimages.com/DQmbpy1cECacrUQHtkfu7QB864zXKKYrULDjso8G9cj5N4e/showmethesbd.png'/> -->
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <a href="https://steemit.com/@newbijohn" target="_blank">
+          <img class="d-block w-100" src="https://s3.ap-northeast-2.amazonaws.com/dclick/image/imrahelk/1541472842360.jpg" alt="@newbijohn"/>
+        </a>
+      </div>
+      <div class="carousel-item">
+        <a href="https://steemit.com/@imrahelk" target="_blank">
+          <img class="d-block w-100" src="https://s3.ap-northeast-2.amazonaws.com/dclick/image/imrahelk/1541472803701.jpg" alt="@imrahelk"/>
+        </a>
+      </div>
+      <div class="carousel-item">
+        <a href="https://steemit.com/@jeank" target="_blank">
+          <img class="d-block w-100" src="https://s3.ap-northeast-2.amazonaws.com/dclick/image/imrahelk/1541472789548.jpg" alt="@jeank"/>
+        </a>
+      </div>
+      <div class="carousel-item">
+        <a href="https://steemit.com/@maikuraki" target="_blank">
+          <img class="d-block w-100" src="https://s3.ap-northeast-2.amazonaws.com/dclick/image/imrahelk/1541472797200.jpg" alt="@maikuraki"/>
+        </a>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <br>
+  <p>참여기간: 2018-11-07 ~ 2018-11-14 까지</p>
+  <a class="btn btn-primary btn-lg" href="https://steemit.com/busy/@newbijohn/2-100" role="button" target="_blank">자세히 보러가기</a>
 </div>
+
 <div id="app">
 	<div class="container">
 		<keep-alive>
@@ -124,6 +165,10 @@ const md = new Remarkable({
   quotes: '“”‘’',
   breaks: true
 });
+
+$('.carousel').carousel({
+  interval: 2000
+})
 
 const ModalComponent = { 
 	template: '#ModalComponent',
